#32 - Mybatis가 스네이크를 자동으로 카멜케이스로도 인식할 수 있도록 설정 추가
https://maemae22.tistory.com/81

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=1234
 mybatis.mapper-locations=mybatis-mapper/*.xml
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+mybatis.configuration.map-underscore-to-camel-case= true
+#mybatis.type-aliases-package=com.example.movie.dto
+
+#spring.thymeleaf.cache= false
+#spring.thymeleaf.prefix=classpath:/templates/
