#32 - Log 설정 및 Log AOP 설정 추가
전상수 강사님 수업 때 배운 Logging을 그대로 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ mybatis.mapper-locations=mybatis-mapper/*.xml
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 mybatis.configuration.map-underscore-to-camel-case= true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+#logging.level.root = info
+#logging.file.name=C:log/test.log
+
 #mybatis.type-aliases-package=com.example.movie.dto
 
 #spring.thymeleaf.cache= false
