수동 merge (jsp 연동 방법 못찾음)
/ticket으로 가면 에러남

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,11 @@ dependencies {
 
 	implementation files('libs/kobis-opcl-rest-v1.0.jar')	//영화진흥위원회 open api
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'	// json 데이터 처리
+
+	implementation group: 'org.apache.tomcat', name: 'tomcat-jasper', version: '9.0.1'
+	implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+	implementation 'org.jsoup:jsoup:1.15.3'
 }
 
 tasks.named('test') {
