--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3307/movie
-spring.datasource.username=root
-spring.datasource.password=0000
+#spring.datasource.url=jdbc:mariadb://localhost:3307/movie
+#spring.datasource.username=root
+#spring.datasource.password=0000
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 mybatis.mapper-locations=mybatis-mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case= true
