--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/movie
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=fbtjs4956!
 
 mybatis.mapper-locations=mybatis-mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case= true
@@ -9,3 +9,4 @@ mybatis.configuration.map-underscore-to-camel-case= true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.jpa.properties.hibernate.format_sql=true
+
